compiler/tests/err-literal-range.c
int main() {
    int x = 4096;
    return x;
}
